--- a/client/main.html
+++ b/client/main.html
@@ -54,7 +54,7 @@
 					When you're done and you want to save a version of your scene,
 					just click Publish and it's enshrined in history.</p>
 
-				<p><a href="http://git.io/meteor3d">
+				<p><a href="https://github.com/ocdtrekkie/meteor-blocks" target="_blank">
 					Check out the code on GitHub.</a></p>
 
 
