--- a/client/scene.html
+++ b/client/scene.html
@@ -82,7 +82,7 @@
 		</div>
 
 		<div class="github-link">
-			<a href="http://git.io/meteor3d">See the code on GitHub</a>
+			<a href="https://github.com/ocdtrekkie/meteor-blocks" target="_blank">See the code on GitHub</a>
 		</div>
 	</div>
 </template>
